Patron Repository terminado
